# datahub-postgres-lineage

./: .flake8  .gitignore  CHANGELOG.md  LICENSE  README.md  Taskfile.yaml  pyproject.toml
.github/: dependabot.yaml
.github/workflows/: cicd.yaml  commit-titles.yaml  release-please.yaml
datahub_postgres_lineage/: ingestion.py
env/cicd/: .env  recipe.yaml  sample.sql
env/local/: .env  recipe.yaml
examples/: docker-compose.yaml  recipe.yaml
tests/: conftest.py
